k8s/msa-kafka.yml
#버전
apiVersion: apps/v1

#자원의 종류(pod, sevice, ReplicaSet, Deployment(이게 일반적, replicaset도 포함됨 : 어떻게 운영을 할 것인지 정책들을 reploicaset에서 함))
kind: Deployment

metadata:
  name: kafka-deployment
  namespace: lgcns
    

spec: 
  replicas: 1
  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
    #docker container
      containers:
      - name: kafka-container
      # 혹, 실행중인 컨테이너를 이미지를 만들고 ecr 바포할 경우 ecr repo 주소사용 가능
        image: wurstmeister/kafka
        ports:
          - containerPort: 9092
          - containerPort: 9093

---  #구분 지어야 함 아래처럼
#core service setting
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: lgcns

spec: 
  type: ClusterIP
  ports:
  - name: outside     #외부 접속 포트
    port: 9092
    targetPort: 9092
    
  - name: inside    # 브로커 내부에서 통신을 사용하는 포트
    port: 9093
    targetPort: 9093

  selector:
    app: kafka      #selector의 name
